Add free text search to planning cases
